tests/NormalTests/paczka1/small_fuzzy/78029435.err
Error in line 14: DsIvn97mtY3 S571 16,3
